--- a/app/views/users/unvote.js.erb
+++ b/app/views/users/unvote.js.erb
@@ -1,4 +1,4 @@
-var $idea = $(".ideas li#<%= @idea.id %>");
+var $idea = $(".ideas div#<%= @idea.id %>");
 if (!$idea.length){
   $idea = $(document);
 }
