--- a/app/views/ideas/_fields.html.erb
+++ b/app/views/ideas/_fields.html.erb
@@ -1,13 +1,13 @@
 <%= render 'shared/error_messages', object: f.object %>
-<div class="form-group">
-	<div class="col-md-6">
+		<div class="form-group">
 		<%= f.label :title %>
 		<%= f.text_field :title, :class => "form-control" %>
+		</div>
+		<div class="form-group">
 		<%= f.label :area_id, "Challenge"%>
-		<%= f.collection_select :area_id, @current_areas, :id, :title, {:selected => @area_sel.id} %>
-	</div>
-	<div class="col-md-12">
+		<%= f.collection_select :area_id, @current_areas, :id, :title, {:selected => @area_sel.id}, :class => "form-control" %>
+		</div>
+		<div class="form-group">
 		<%= f.label :content, "Description" %>
 		<%= f.cktext_area :content, :class => "form-control", :ckeditor => {:toolbar => 'mini'} %>
-	</div>
-</div>
+		</div>
