--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -1,22 +1,13 @@
 <% provide(:title, @current_org.name) %>
 <div class="row">
-    <div class="col-md-3 well">
-        <a href="/submit"><button type="button" class="btn btn-lg btn-primary">Submit an Idea</button></a>
-        <hr>
-        <h3>Areas</h3>
-        <%= render 'shared/area_menu' %>
-    </div>
-    <div class="col-md-9">
-      <div class="jumbotron">
-      <h1><%= @current_org.name %></h1>
-      <p><%= @current_org.description %></p>
-      </div>
-      <% if @ideas.any? %> 
-      <h2>Latest Ideas</h2>   
-        <ol class="media-list">
-          <%= render partial: "shared/idea", collection: @ideas, as: :idea %>
-        </ol>
-      <% end %>
-    </div>
+  <div class="col-md-8">    
+    <h3>Activity Feed</h3>   
+    <ol class="media-list ideas">
+      <%= render partial: "shared/activity_feed", collection: @ideas %>
+    </ol>
   </div>
-
+  <div class="col-md-4 col-sm-6">
+      <h3>Challenges</h3>
+      <%= render 'shared/area_menu' %>
+  </div>
+</div>
