--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,14 +3,17 @@
 
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <%= form_for(@user) do |f| %>
-      <%= render 'fields', f: f %>
-      <div class="form-group">
-      	<%= f.submit "Save changes", class: "btn btn-lg btn-primary" %>
-  		</div>
-    <% end %>
-
-    <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <%= form_for(@user) do |f| %>
+          <%= render 'fields', f: f %>
+          <div class="form-group">
+          	<%= f.submit "Save changes", class: "btn btn-lg btn-primary" %>
+      		</div>
+        <% end %>
+        <%= gravatar_for @user %>
+        <a href="http://gravatar.com/emails">Change</a>
+      </div>
+    </div>
   </div>
 </div>
