--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,9 +3,15 @@
 
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <%= form_for(@user) do |f| %>
-      <%= render 'fields', f: f %>
-      <%= f.submit "Create my account", class: "btn btn-lg btn-primary" %>
-    <% end %>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <%= form_for(@user) do |f| %>
+          <%= render 'fields', f: f %>
+          <div class="form-group">
+          <%= f.submit "Create my account", class: "btn btn-lg btn-success" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
