--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -2,9 +2,9 @@
 <div class="row">
   <div class="col-md-8">    
     <h3>Activity Feed</h3>   
-    <ol class="media-list ideas">
+    <div class="media-list ideas">
       <%= render partial: "shared/activity_feed", collection: @ideas %>
-    </ol>
+    </div>
   </div>
   <div class="col-md-4 col-sm-6">
       <h3>Challenges</h3>
