--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -1,23 +1,18 @@
 <% provide(:title, @area.title) %>
 <div class="row">
     <div class="col-md-3 well">
-        <a href="/submit"><button type="button" class="btn btn-lg btn-primary">Submit an Idea</button></a>
-        <hr>
-        <h3>Areas</h3>
-        <%= render 'shared/area_menu' %>
+      <h3>Areas</h3>
+      <%= render 'shared/area_menu' %>
     </div>
     <div class="col-md-9">
       <div class="jumbotron">
-      <h1><%= @area.title %></h1>
-      <p><%= @area.description %></p>
+      <h3><%= @area.title %><hr><small><%= @area.description %></small></h3>
       </div>
-      <% if @ideas_all.any? %>
-      <% @ideas = @ideas_all.paginate(:page => params[:page], :per_page => 10, :order => 'created_at DESC')%>
-      <%= will_paginate @ideas %>
-      <ol class="media-list ideas">
-        <%= render partial: "shared/idea", collection: @ideas, as: :idea %>
-      </ol>
-      <%= will_paginate @ideas %>
+      <% if @ideas.any? %>
+      <div class="media-list ideas">
+        <%= render @ideas %>
+      </div>
+      <%= link_to 'Load More Ideas', area_path(params.merge(:page => @ideas.next_page)), :class => 'load-more-ideas', :remote => true if @ideas.next_page %>
       <% end %>
     </div>
   </div>
