--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,6 +1,6 @@
 var $idea = $("div#<%= @idea.id %>");
 $idea.find('.comments').show();
-$idea.find('ol.comment-list').append('<%= j render partial: "shared/comment", collection: @comments %>');
+$idea.find('.comment-list').append('<%= j render partial: "shared/comment", collection: @comments %>');
 
 var $load_link = $idea.find('a.load-more-comments');
 if ($load_link.length){
@@ -9,7 +9,7 @@ if ($load_link.length){
 else{
   $idea.find('a.comment_link').attr('href', '#')
   $idea.find('a.comment_link').removeClass('comment_link').addClass('hide_comments')
-  $idea.find('ol.comment-list').after('<%= link_to "Show More Comments", 
+  $idea.find('.comment-list').after('<%= link_to "Show More Comments", 
             idea_comments_path(@idea, :page => @comments.next_page), 
             :class => "load-more-comments", :remote => true if @comments.next_page %>');
 }
