--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -5,18 +5,27 @@
     <% end %>
     <h4><%= link_to highlight(wrap(idea.title), @search), idea_path(idea.id) %></h4>
   </div>
-  <div class="panel-body">
+  <div class="panel-body idea-panel">
     <% if @images && @images[idea.id] %>
   		<div class="media-object pull-left thumb-list"><%= image_tag(@images[idea.id], :class => "img-circle") %></div>
     <% end %>
 		<div class="idea-body">
-      <p class="content">  
-          <%= highlight(strip_tags(idea.content.truncate(200)), @search) %>
-          <%= link_to 'Show more', idea_path(:id => idea.id), :class => 'load_full_content', :remote => true %>
-      </p>
-      </div>
-      <hr>
-      <div class="idea-info">
+      <span class="content">  
+          <%= truncate_html(idea.content, length: 200, omission: '...') %>
+          <% if idea.content.length > 200 %>
+            <%= link_to 'Show more', idea_path(:id => idea.id), :class => 'load_full_content', :remote => true %>
+            <% end %>
+      </span>
+      <span class="pull-right idea-actions">
+      <% if current_user?(idea.user) %>
+        <%= link_to "Edit", edit_idea_path(idea.id), class: "glyphicon glyphicon-edit" %>
+        <%= link_to "Delete", idea, method: :delete,
+                data: { confirm: "Are you sure you want to delete the idea?" },
+                title: idea.title, class: "glyphicon glyphicon-remove" %>
+      <% end %>
+      </span>
+    </div>
+    <div class="idea-info">
       <span class="timestamp">
         Posted <%= time_ago_in_words(idea.created_at) %> ago by <%= link_to idea.user.name, idea.user %> in <%= link_to Area.find(idea.area_id).title, Area.find(idea.area_id) %>.
       </span>
@@ -27,16 +36,8 @@
           <% else %>0 Comments<% end %>
         </span> | <span class="idea-votes"><%= pluralize(idea.vote_count, "Upvote") %></span> <span class="vote-link"><%= link_to "", @vote_link[idea.id], :class => 'glyphicon glyphicon-thumbs-up ' + @vote_class[idea.id] , :remote => true %></span>
       </span>
-      <span class="pull-right idea-actions">
-      <% if current_user?(idea.user) %>
-      	<%= link_to "Edit", edit_idea_path(idea.id), class: "glyphicon glyphicon-edit" %>
-        <%= link_to "Delete", idea, method: :delete,
-                                         data: { confirm: "Are you sure you want to delete the idea?" },
-                                         title: idea.title, class: "glyphicon glyphicon-remove" %>
-      <% end %>
-      </span>
     </div>
-      <div class="comments" style="display: none"><hr><p class="lead">Comments</p><ol class="comment-list"></ol></div>
+      <div class="comments" style="display: none"><hr><p class="lead">Comments</p><div class="comment-list"></div></div>
     
   </div>
 </div>
