--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -43,16 +43,7 @@
 </div>
 <div class="col-md-4">
 	<div class="idea-info well">
-    <p class="lead">Info</p>
-    <p>Author: <%= link_to @idea.user.name, @idea.user %></p>
-    <p>Challenge: <%= link_to Area.find(@idea.area_id).title, Area.find(@idea.area_id) %></p>
-    <p>Posted: <%= @idea.created_at %></p>
-    </br>
-    <span><% if @idea.comment_count %>
-      <%= pluralize(@idea.comment_count, "Comment")%>
-      <% else %>0 Comments<% end %>
-    </span> | 
-    <span class="idea-votes"><%= pluralize(@idea.vote_count, "Upvote") %></span> 
+    <%= render partial: "shared/idea_info" %> 
     <span class="vote-link"><%= link_to "", @vote_link, :class => 'glyphicon glyphicon-thumbs-up ' + @vote_class , :remote => true %></span>  
   </div>
 </div>
