--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
         <ul class="nav navbar-nav navbar-right">
           
           <li><%= link_to current_user.name, current_user %></a></li>
-          <li>
+          <!-- <li>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
             <ul class="dropdown-menu">
               <li><a href="#"><span class="badge pull-right">40</span>Link</a></li>
@@ -29,7 +29,7 @@
               <li><a href="#"><span class="label label-info pull-right">1</span>Link</a></li>
               <li><a href="#"><span class="badge pull-right">13</span>Link</a></li>
             </ul>
-          </li>
+          </li> -->
           
           <li>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i></a>
@@ -57,8 +57,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
-        
+        </button>     
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse2">
         <ul class="nav navbar-nav navbar-left">
@@ -66,9 +65,10 @@
           
           <%= active_link_to "Ideas", ideas_path, "data-role" => "button", :wrap_tag => :li %>
           <%= active_link_to "Challenges", areas_path, "data-role" => "button", :wrap_tag => :li %>
-          <%= active_link_to "Submit Idea", submit_path, "data-role" => "button", :data => {:toggle=>"modal"}, :wrap_tag => :li %>
+          <%= active_link_to "Submit Idea", submit_path, "data-role" => "button", :data => {:toggle=>"modal"}, :wrap_tag => :li if current_areas.any? %>
           <%= active_link_to "Help", help_path, "data-role" => "button", :wrap_tag => :li %>
           <%= active_link_to "Users", users_path, "data-role" => "button", :wrap_tag => :li %>
+          <%= active_link_to "Admin Panel", admin_root_path, "data-role" => "button", :wrap_tag => :li if admin? %>
         </ul>
       </div> 
     </div> 
