--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -6,6 +6,13 @@
     	<span class="timestamp">
     	  Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= link_to comment.user.name, comment.user %>.
     	</span>
+      <span class="pull-right comment-actions">
+      <% if current_user?(comment.user) %>
+        <%= link_to "Delete", idea_comment_path(:id => comment.id, :idea_id => comment.commentable_id), method: :delete,
+                data: { confirm: "Are you sure you want to delete the comment?" },
+                title: "Delete comment?", class: "glyphicon glyphicon-remove" %>
+      <% end %>
+      </span>
     </div>
   </div>
 </div>
